static/styles/mdp.scss
/* ... */
.fake-input {
  &__container {
    position: relative;
    border:solid 3px $color-brown; border-radius: 50%;
    z-index: 10000;
    input {
      display: block;
      width: 100%;
      height: 100%;
      position: absolute;
      top: 0; left: 0; bottom: 0; right: 0;
      z-index: 10002;
      opacity: 0;
      cursor: pointer;
    }
  }
  &__icon{
    color: $color-brown;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    z-index: 10001;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    & > * {margin:0; padding:0;}

  }
}

.profile-edit__tooltip{

  left:75%!important;
  * { background: #f00!important; color:#fff!important; }
  .tooltip-arrow { display: none!important;}

}
                                                                                
chatbot {
  //position:fixed; right:5%; bottom:0; width:30%; z-index:1000000;
  position:absolute; right:0; bottom:0; width:100%!important; z-index:1000000;

  .chatbot{
    width:100%;

    &__container{background: white; border-radius: 5px 5px 0 0; overflow: hidden; box-shadow: 0 0 2px #a3a3a3;}

    &__header{

      &__flex{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        height: 100%;
      }

      width: 100%; height:60px;

      position: relative;
      background: $color-red;
      h1, h2, h3 ,h4, h5 { margin:0; padding:0; }
        .entity-actions {
          flex-grow:1;
          margin:0; height:100%;
          display: flex; flex-direction:row; justify-content: center; align-items: center;
          & > * { margin:0 10px; color:$color-red--dark;}
        }
    }
    &__body{
      background: white;
      @extend .cairo; @extend .semi-bold;
      letter-spacing: normal; line-height: normal;
      text-align: center;
    }

    &__toggler {
      right: 5%;
      position: absolute;
      top: 0;
      display: flex;
      flex-direction: column;
      justify-content: center;
      height: 100%;
    }

  }
}

.tooltip {
  z-index:300000000;
  big {  }
}
.tag-tooltip * {word-wrap: break-word!important;}
.tooltip-inner {word-wrap: break-word!important;}

.profile-question {

  @media all and(min-width: #{ nth(map-get($ombreakpoints, lg), 1)} ){ &:nth-child(3n+4){ clear: both; }}
  @media all and(max-width: #{ nth(map-get($ombreakpoints, lg), 1)} ){ &:nth-child(2n+3){ clear: both; } }


  &__actions {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;

    & > * {display: none;}
    &:hover > * {display: block;}
    &--edit > * {display: block}
  }

  .profile-question {
    padding:10%; border:solid 1px #efefef;
    &__actions {
      position: absolute; top:0; right:0; bottom:0; left:0; width:100%; height:100%;
    }
    &__answers {
      width:100%;
      display: flex;
      flex-direction: row;
      justify-content: space-around;
      align-items: center;
      background: #fff;
      padding:5% 0 0 0;
      flex-wrap: wrap;
    }
  }

  &--edit {
    position: absolute;
    z-index: 1000000;
    box-shadow: 0 0 3px #000;
    left: -10%;

    @media all and(max-width: 768px){ left:0; max-width: 100%; }

  }

}

.hidden_space_bottom{ display: none;}
.wizard__close{
  z-index: 20000000;
  cursor: pointer;
  position: absolute; top:0%; right: 5%;
  .chatbot & {display:none;}
}


@media all and(max-width: 768px){

  footer { position:fixed!important; bottom:0!important; height : 70px!important; }
  .chatbot_section { position:fixed!important; bottom:70px!important; }
  .hidden_space_bottom{ display: block; height: 130px;}
  .mobile__padding{ padding-left: 2%!important; padding-right: 2%!important; }

  .no-mobile {display: none!important;}

  .mobile__row { margin-left:0!important; margin-right:0!important;}

}

